# Plactica-Wokwi

./: CMakeLists.txt  Index.html  README.md  diagram.json  main.py
docs/: architecture.md  wiring.md  wokwi.md
